crates/vize_patina/src/rules/script/snapshots/vize_patina__rules__script__no_side_effects_in_computed__tests__invalid_update_expression_on_this.snap
---
source: crates/vize_patina/src/rules/script/no_side_effects_in_computed.rs
expression: result.diagnostics
---
[
    LintDiagnostic {
        rule_name: "script/no-side-effects-in-computed-properties",
        severity: Error,
        message: "Unexpected side effect in a computed property: an update of `this`.",
        start: 51,
        end: 63,
        help: Some(
            "A computed getter must be pure: derive and return a value without mutating component state. Move the mutation to a method or a watch handler.",
        ),
        labels: [
            Label {
                message: "side effect inside computed getter",
                start: 51,
                end: 63,
            },
        ],
        fix: None,
    },
]
